--- a/package.json
+++ b/package.json
@@ -1,26 +1,18 @@
 {
-  "name": "milestone-project",
+  "name": "capstone-project",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://c7204-omer.github.io/blog-app-project/",
+  "homepage": "",
   "dependencies": {
-    "@material-ui/core": "^4.11.4",
+    "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "firebase": "^8.6.5",
+    "axios": "^0.21.3",
     "formik": "^2.2.9",
-    "gh-pages": "^3.2.1",
-    "material-ui": "^0.20.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-material-ui": "^0.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.4",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.3",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.9"
   },
@@ -28,9 +20,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "yarn build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
